--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div id="loader"></div>
     
     <div id="content" style="display: none;">
-        <h1>TESTING ANIMATIONS C:</h1>
+        <h1>TESTING ANIMATIONS</h1>
     </div>
     
     <script>
